Bugfixes and updates:
- Update sidebar account settings icon
- Update Select component to a custom element
- Fix narrow window seed input too wide

--- a/src/desktop/src/ui/components/chart.scss
+++ b/src/desktop/src/ui/components/chart.scss
@@ -96,9 +96,8 @@
                 top: 0px;
                 left: 0px;
                 width: 100%;
-                height: 2px;
-                background: var(--body);
-                opacity: 0.1;
+                height: 1px;
+                background: var(--body-bg);
             }
             p {
                 line-height: 34px;
@@ -121,7 +120,7 @@
     .label {
         background: var(--body-bg);
         color: var(--secondary);
-        padding: 4px 6px;
+        padding: 4px 12px;
         border-radius: 4px;
         font-size: 12px;
     }
